--- a/hostapd.conf
+++ b/hostapd.conf
@@ -1,14 +1,20 @@
 interface=wlxa047d7605b5a
 driver=nl80211
+
 ssid=PBL3_GROUP1_JOBAPPJS
 hw_mode=g
 channel=6
+ieee80211n=1
+wmm_enabled=1
 auth_algs=1
+ignore_broadcast_ssid=0
+
+# WPA2 Personal
 wpa=2
 wpa_passphrase=12345678
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
 
-# ====== Security / Isolation ======
-# Chặn client trực tiếp nhau ở layer2
-ap_isolate=1
+# Logging
+logger_syslog=-1
+logger_syslog_level=2
