--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -2,17 +2,18 @@ interface=wlxa047d7605b5a
 bind-interfaces
 listen-address=192.168.4.1
 
-dhcp-range=192.168.4.2,192.168.4.50,12h
+dhcp-range=192.168.4.10,192.168.4.100,12h
 dhcp-option=3,192.168.4.1
-dhcp-option=6,192.168.4.1  # Gateway IP là DNS Server
-dhcp-authoritative
+dhcp-option=6,192.168.4.1
 
-# Trả IP thật cho idu.vn (Cần thiết để client chưa login vẫn truy cập được idu.vn)
-server=/idu.vn/8.8.8.8
+# KHÔNG CHO LOOP DNS
+# address=/#/192.168.4.1   ← XOÁ
 
-# **Bỏ dòng address=/#/192.168.4.1**
+# Chỉ chặn các domain captive portal
+address=/connectivitycheck.gstatic.com/192.168.4.1
+address=/clients3.google.com/192.168.4.1
+address=/msftconnecttest.com/192.168.4.1
+address=/neverssl.com/192.168.4.1
 
 log-queries
-log-facility=/var/log/dnsmasq-captive.log
-pid-file=/var/run/dnsmasq-captive.pid
-cache-size=150
+log-dhcp
