--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -2,15 +2,35 @@ interface=wlxa047d7605b5a
 bind-interfaces
 listen-address=192.168.4.1
 
+# DHCP:
 dhcp-range=192.168.4.10,192.168.4.100,12h
 dhcp-option=3,192.168.4.1
 dhcp-option=6,192.168.4.1
 
-# Chỉ chặn các domain captive portal
+# Redirect theo hệ điều hành:
 address=/connectivitycheck.gstatic.com/192.168.4.1
-address=/clients3.google.com/192.168.4.1
+address=/connectivitycheck.android.com/192.168.4.1
+address=/play.googleapis.com/192.168.4.1
+address=/captive.apple.com/192.168.4.1
+address=/www.apple.com/192.168.4.1
+address=/updates.cdn-apple.com/192.168.4.1
 address=/msftconnecttest.com/192.168.4.1
+address=/www.msftconnecttest.com/192.168.4.1
+address=/detectportal.firefox.com/192.168.4.1
 address=/neverssl.com/192.168.4.1
 
+# Chuyển về IDU:   
+address=/idu.vn/104.21.51.174
+address=/idu.vn/172.67.183.53
+address=/www.idu.vn/104.21.51.174
+address=/www.idu.vn/172.67.183.53
+
+# Debug (không quan trọng):
 log-queries
+log-facility=local0
 log-dhcp
+
+# Performance:
+cache-size=2000
+dns-loop-detect
+bogus-priv
