--- a/hostapd.conf
+++ b/hostapd.conf
@@ -6,14 +6,10 @@ hw_mode=g
 channel=6
 ieee80211n=1
 wmm_enabled=1
+
+# Open network
 auth_algs=1
 ignore_broadcast_ssid=0
-
-# WPA2 Personal
-wpa=2
-wpa_passphrase=12345678
-wpa_key_mgmt=WPA-PSK
-rsn_pairwise=CCMP
 
 # Logging
 logger_syslog=-1
